@@ -246,6 +246,11 @@ public:
     
 #endif
 
+	/**************************/
+	/* footprint operations : */
+	/**************************/
+	void Change_Side_Module( MODULE* Module, wxDC* DC );
+
 	/*************************/
 	/* Copper Areas handling */
 	/*************************/
