@@ -4,6 +4,14 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+
+
+2008-Jan-25 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++pcbnew:
+	void Change_Side_Module( MODULE* Module, wxDC* DC ) is now member of class BOARD.
+	
+
 2008-Jan-24 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 +pcbnew:
